--- a/.gitignore
+++ b/.gitignore
@@ -65,6 +65,7 @@ typings/
 # dotenv environment variables file
 .env
 .env.test
+.env.build
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
