--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "husky": "^3.0.2",
     "lint-staged": "^9.2.1",
     "next-purgecss": "^3.1.1",
+    "next-manifest": "^2.0.0",
     "postcss-easy-import": "^3.0.0",
     "prettier": "^1.18.2",
     "tailwindcss": "^1.0.5"
