--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -8,7 +8,29 @@
   ],
   "imageSize": 100,
   "commit": true,
-  "commitConvention": "eslint",
-  "contributors": [],
+  "commitConvention": "none",
+  "contributors": [
+    {
+      "login": "vinaypuppal",
+      "name": "vínαч puppαl",
+      "avatar_url": "https://avatars1.githubusercontent.com/u/8843216?v=4",
+      "profile": "https://www.vinaypuppal.com/",
+      "contributions": [
+        "code",
+        "doc",
+        "design"
+      ]
+    },
+    {
+      "login": "krushiraj",
+      "name": "Krushi Raj Tula",
+      "avatar_url": "https://avatars0.githubusercontent.com/u/19507241?v=4",
+      "profile": "http://krushiraj.github.io",
+      "contributions": [
+        "code",
+        "doc"
+      ]
+    }
+  ],
   "contributorsPerLine": 7
 }
