--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -27,8 +27,7 @@
       "avatar_url": "https://avatars0.githubusercontent.com/u/19507241?v=4",
       "profile": "http://krushiraj.github.io",
       "contributions": [
-        "code",
-        "doc"
+        "code"
       ]
     }
   ],
