--- a/env.sample
+++ b/env.sample
@@ -5,3 +5,5 @@ RZP_LIVE_SECRET=
 AIRTABLE_KEY=
 AIRTABLE_BASE_ID=
 AIRTABLE_TABLE_NAME=
+AIRTABLE__FUNDING_TABLE_NAME=
+AIRTABLE__CAMPAIGN_TABLE_NAME=
