--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "cuid": "^2.1.6",
     "is-mobile": "^2.0.1",
     "next": "^9.0.2",
+    "now": "^16.5.2",
     "qrcode.react": "^0.9.3",
     "razorpay": "^2.0.4",
     "react": "^16.8.6",
