--- a/package.json
+++ b/package.json
@@ -29,12 +29,19 @@
     "airtable": "^0.7.0",
     "clsx": "^1.0.4",
     "cuid": "^2.1.6",
+    "fromnow": "^3.0.1",
     "is-mobile": "^2.0.1",
+    "isomorphic-unfetch": "^3.0.0",
     "next": "^9.1.4",
+    "nprogress": "^0.2.0",
     "qrcode.react": "^0.9.3",
     "razorpay": "^2.0.4",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-div-100vh": "^0.3.4",
+    "react-dom": "^16.8.6",
+    "react-virtualized-auto-sizer": "^1.0.2",
+    "react-window": "^1.8.5",
+    "swr": "^0.1.12"
   },
   "devDependencies": {
     "@types/node": "^12.12.12",
