--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "swr": "^0.1.12"
   },
   "devDependencies": {
+    "@fullhuman/postcss-purgecss": "^1.3.0",
     "@types/node": "^12.12.12",
     "@types/react": "^16.9.12",
     "@types/react-dom": "^16.9.4",
