Adds a separate form to pay for Coderplex

--- a/now.json
+++ b/now.json
@@ -11,6 +11,7 @@
     "AIRTABLE_KEY": "@airtable_key",
     "AIRTABLE_BASE_ID": "@airtable_base_id",
     "AIRTABLE__DONATIONS_TABLE_NAME": "@airtable__donations_table_name",
+    "AIRTABLE__PAYMENTS_TABLE_NAME": "@airtable__payments_table_name",
     "AIRTABLE__FUNDING_TABLE_NAME": "@airtable__funding_table_name",
     "AIRTABLE__CAMPAIGN_TABLE_NAME": "@airtable__campaign_table_name"
   },
