--- a/env.sample
+++ b/env.sample
@@ -5,5 +5,6 @@ RZP_LIVE_SECRET=
 AIRTABLE_KEY=
 AIRTABLE_BASE_ID=
 AIRTABLE__DONATIONS_TABLE_NAME=Donations
+AIRTABLE__PAYMENTS_TABLE_NAME=Payments
 AIRTABLE__CAMPAIGN_TABLE_NAME=Campaigns
 AIRTABLE__FUNDING_TABLE_NAME=Funding
